# seaotter

./: .gitignore  README.md  REPRODUCE.md  _config.yml  _toc.yml  build_docs.py  optimize_images.py  overview.md  pyproject.toml  results.md  seaotter.ipynb
docs/: genindex.html  index.html  objects.inv  overview.html  results.html  seaotter.html  search.html  searchindex.js
docs/_sources/: overview.md
experiments/clip_production/: findings.md
experiments/codec_kodak_eval/: findings.md  run_cls_eval.py  run_eval.py  run_eval_encoders.py
experiments/iter6_extra_codec_baselines/: README.md  findings.md
experiments/lambda_sweep/: findings.md
experiments/storage_5line/: check_acceptance.py  launch.py
experiments/wal_seg_clip/: check_acceptance.py  launch.py
paper_figures/: make_codec_kodak_fig.py  make_extra_figures.py  make_figures.py  make_radar_figure.py  make_radar_figure_data.py  make_tables.py
paper_figures/notes/: _compute_radar_rankings.py  _compute_radar_rankings_v3.py  encode_complexity_run.md  radar_rankings.md  radar_rankings_data_driven.md  radar_rankings_v2.md
results/: DELETIONS.md  TRACEABILITY.md
results/codec_kodak/: eval_avif_kodak_q1.json  eval_avif_kodak_q10.json  eval_avif_kodak_q2.json  eval_avif_kodak_q3.json  eval_avif_kodak_q4.json  eval_avif_kodak_q5.json  eval_avif_kodak_q6.json  eval_avif_kodak_q7.json  eval_avif_kodak_q8.json  eval_avif_kodak_q9.json  eval_avifx_kodak_q1_s10.json  eval_avifx_kodak_q2_s10.json  eval_avifx_kodak_q3_s10.json  eval_avifx_kodak_q4_s10.json  eval_wal_kodak_p4.json  (+27 more)
tools/: export_pipeline_bundle.py
(+556 files in other folders)
